// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating inline messages Shows correct message for multiple inline violations for the same file and line 1`] = `
"
<!--
  2 failure:  Test message, Warning message
  2 warning:  Test message, Warning message
  2 messages
  2 markdown notices
  DangerID: danger-id-blankID;
  File: File.swift;
  Line: 10;
-->
- :no_entry_sign: Test message
- :no_entry_sign: Warning message
- :warning: Test message
- :warning: Warning message
- :book: Test message
- :book: Warning message
Test message

Warning message
  "
`;

exports[`generating inline messages Shows correct messages for inline/regular violations 1`] = `
"
<!--
  0 failure: 
  2 warning:  Test message, Warning message
  
  
  DangerID: danger-id-blankID;
-->


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Warnings</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:warning:</td>
      <td>

  **File.swift#L10** - Test message
  </td>
    </tr>
  
<tr>
      <td>:warning:</td>
      <td>Warning message</td>
    </tr>
  </tbody>
</table>



<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a> against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
</p>
"
`;

exports[`generating inline messages Shows correct messages with custom icon for inline/regular violations 1`] = `
"
<!--
  0 failure: 
  0 warning: 
  1 messages
  
  DangerID: danger-id-blankID;
-->



<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>📝</td>
      <td>

  **File.swift#L10** - Message with custom icon
  </td>
    </tr>
  </tbody>
</table>


<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a> against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
</p>
"
`;

exports[`generating messages Mixed icon messages match snapshot 1`] = `
"
<!--
  0 failure: 
  0 warning: 
  3 messages
  
  DangerID: danger-id-blankID;
-->



<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>📝</td>
      <td>Message with custom icon</td>
    </tr>
  
<tr>
      <td>🔔</td>
      <td>Message with custom icon2</td>
    </tr>
  
<tr>
      <td>:book:</td>
      <td>Test message</td>
    </tr>
  </tbody>
</table>


<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a> against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
</p>
"
`;

exports[`generating messages avoids adding space inside the <td> for proper vertical alignment if the message does not contain any markdown 1`] = `
"
<!--
  0 failure: 
  0 warning: 
  1 messages
  
  DangerID: danger-id-example-id;
-->



<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:book:</td>
      <td>no markdown here</td>
    </tr>
  </tbody>
</table>


<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a> against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
</p>
"
`;

exports[`generating messages leaves space between <td>s to allow GitHub to render message content as markdown if the message contains any 1`] = `
"
<!--
  1 failure:  **Failure:** Some...
  1 warning:  _Maybe you meant ...
  1 messages
  1 markdown notices
  DangerID: danger-id-example-id;
-->

<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Fails</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:no_entry_sign:</td>
      <td>

  **Failure:** Something failed!
  </td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Warnings</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:warning:</td>
      <td>

  _Maybe you meant to run \`yarn install\`?_
  </td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:book:</td>
      <td>

  \`\`\`ts
function add(a: number, b: number): number {
  return a + b
}
\`\`\`
  </td>
    </tr>
  </tbody>
</table>

List of things:

* one
* two
* three

<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a> against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
</p>
"
`;

exports[`generating messages summary result matches snapshot, with a commit 1`] = `
"
<!--
  1 failure:  Failing message F...
  1 warning:  Warning message W...
  1 messages
  1 markdown notices
  DangerID: danger-id-blankID;
-->

<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Fails</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:no_entry_sign:</td>
      <td>Failing message Failing message</td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Warnings</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:warning:</td>
      <td>Warning message Warning message</td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:book:</td>
      <td>message</td>
    </tr>
  </tbody>
</table>

markdown
<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a> against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
</p>
"
`;

exports[`generating messages summary result matches snapshot, without a commit 1`] = `
"
<!--
  1 failure:  Failing message F...
  1 warning:  Warning message W...
  1 messages
  1 markdown notices
  DangerID: danger-id-blankID;
-->

<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Fails</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:no_entry_sign:</td>
      <td>Failing message Failing message</td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Warnings</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:warning:</td>
      <td>Warning message Warning message</td>
    </tr>
  </tbody>
</table>


<table>
  <thead>
    <tr>
      <th width=\\"50\\"></th>
      <th width=\\"100%\\" data-danger-table=\\"true\\">Messages</th>
    </tr>
  </thead>
  <tbody><tr>
      <td>:book:</td>
      <td>message</td>
    </tr>
  </tbody>
</table>

markdown
<p align=\\"right\\">
  Generated by :no_entry_sign: <a href=\\"https://danger.systems/js\\">dangerJS</a>
</p>
"
`;
